--- a/.github/workflows/demo.yml
+++ b/.github/workflows/demo.yml
@@ -10,7 +10,7 @@
 name: Deploy to Amazon ECS
 
 on:
-  push:
+  pull_request:
     branches:
       - main
 
@@ -22,6 +22,10 @@ env:
   ECS_TASK_DEFINITION: fastfoodapi-eventos:1/task_definition.json # set this to the path to your Amazon ECS task definition # file, e.g. .aws/task-definition.json
   CONTAINER_NAME: container-fastfoodapi           # set this to the name of the container in the
                                                # containerDefinitions section of your task definition
+
+permissions:
+      id-token: write
+      contents: read
 
 jobs:
   deploy:
@@ -35,8 +39,8 @@ jobs:
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@0e613a0980cbf65ed5b322eb7a1e075d28913a83
         with:
-          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          role-to-assume: arn:aws:iam::235145177657:role/github-group-7-role
+          role-session-name: GitHub_to_AWS_via_FederatedOIDC
           aws-region: ${{ env.AWS_REGION }}
 
       - name: Login to Amazon ECR
