--- a/.github/workflows/demo.yml
+++ b/.github/workflows/demo.yml
@@ -39,7 +39,7 @@ jobs:
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@0e613a0980cbf65ed5b322eb7a1e075d28913a83
         with:
-          role-to-assume: arn:aws:iam::235145177657:role/github-group-7-role
+          role-to-assume: arn:aws:iam::235145177657:role/testeRole
           role-session-name: GitHub_to_AWS_via_FederatedOIDC
           aws-region: ${{ env.AWS_REGION }}
 
