--- a/.github/workflows/demo.yml
+++ b/.github/workflows/demo.yml
@@ -19,7 +19,7 @@ env:
   ECR_REPOSITORY: fastfood-api           # set this to your Amazon ECR repository name
   ECS_SERVICE: svc-fastfooodapi                 # set this to your Amazon ECS service name
   ECS_CLUSTER: fastfoodapi                 # set this to your Amazon ECS cluster name
-  ECS_TASK_DEFINITION: ./task-definition.json # set this to the path to your Amazon ECS task definition # file, e.g. .aws/task-definition.json
+  ECS_TASK_DEFINITION: fastfoodapi-eventos:1/task_definition.json # set this to the path to your Amazon ECS task definition # file, e.g. .aws/task-definition.json
   CONTAINER_NAME: container-fastfoodapi           # set this to the name of the container in the
                                                # containerDefinitions section of your task definition
 
@@ -49,7 +49,7 @@ jobs:
 
       - name: Build, tag, and push image to Amazon ECR
         id: build-image
-        env: 
+        env:
           ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
           IMAGE_TAG: ${{ github.sha }} 
         run: |
