--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -40,8 +40,7 @@ jobs:
 
       - name: Run kubectl
         uses: nikosch86/github-action-eks-kubectl@main
-        run: cd ../../k8s
         with:
-          command: "apply -f db-secret.yaml,fastfoodapi-deployment.yaml,pv.yaml,fastfoodpostgres-pod.yaml,fastfoodapi-svc.yaml,fastfoodpostgres-svc.yaml"
+          command: "apply -f k8s/"
         env:
           EKS_CLUSTER: ${{ env.CLUSTER_NAME }}
