--- a/.github/workflows/postgres-deploy.yml
+++ b/.github/workflows/postgres-deploy.yml
@@ -39,7 +39,6 @@ jobs:
           ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
           IMAGE_TAG: ${{ github.sha }} 
         run: |
-          cd Docker
-          docker build -t $ECR_REGISTRY/$POSTGRES_ECR_REPOSITORY:$IMAGE_TAG .
+          docker build -t $ECR_REGISTRY/$POSTGRES_ECR_REPOSITORY:$IMAGE_TAG Docker
           docker push $ECR_REGISTRY/$POSTGRES_ECR_REPOSITORY:$IMAGE_TAG
           echo "image=$ECR_REGISTRY/$POSTGRES_ECR_REPOSITORY:$IMAGE_TAG" >> $GITHUB_OUTPUT
