--- a/.github/workflows/postgres-deploy.yml
+++ b/.github/workflows/postgres-deploy.yml
@@ -8,6 +8,11 @@ on:
 env:
   AWS_REGION: us-east-1
   POSTGRES_ECR_REPOSITORY: fastfood-postgres
+  DATABASE_HOSTNAME: ${{secrets.DATABASE_HOSTNAME}}
+  DATABASE_PORT: ${{secrets.DATABASE_PORT}}
+  DATABASE_USERNAME: ${{secrets.DATABASE_USERNAME}}
+  DATABASE_PASSWORD: ${{secrets.DATABASE_PASSWORD}}
+  DATABASE_NAME: fastapi #changed to fastapi_test
 
 permissions:
       id-token: write
@@ -17,6 +22,16 @@ jobs:
   deploy:
     name: Run Docker build, tag and push
     runs-on: ubuntu-latest
+
+    services:
+      postgres:
+        image: postgres:14-2
+        env:
+            POSTGRES_PASSWORD: ${{secrets.DATABASE_PASSWORD}}
+            POSTGRES_DB: fastapi_test
+            POSTGRES_USER: ${{secrets.DATABASE_USERNAME}}
+        ports:
+            - 5432:5432
 
     steps:
       - name: Checkout
