--- a/.github/workflows/postgres-deploy.yml
+++ b/.github/workflows/postgres-deploy.yml
@@ -25,7 +25,7 @@ jobs:
 
     services:
       postgres:
-        image: postgres:14-2
+        image: postgres:14.2-alpine
         env:
             POSTGRES_PASSWORD: ${{secrets.DATABASE_PASSWORD}}
             POSTGRES_DB: fastapi_test
