--- a/.github/workflows/api-deploy.yml
+++ b/.github/workflows/api-deploy.yml
@@ -58,9 +58,9 @@ jobs:
           ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
           IMAGE_TAG: ${{ github.sha }} 
         run: |
-          docker build -t $ECR_REGISTRY/$API_ECR_REPOSITORY:$IMAGE_TAG .
-          docker push $ECR_REGISTRY/$API_ECR_REPOSITORY:$IMAGE_TAG
-          echo "image=$ECR_REGISTRY/$API_ECR_REPOSITORY:$IMAGE_TAG" >> $GITHUB_OUTPUT
+          docker build -t $ECR_REGISTRY/$API_ECR_REPOSITORY:latest .
+          docker push $ECR_REGISTRY/$API_ECR_REPOSITORY:latest
+          echo "image=$ECR_REGISTRY/$API_ECR_REPOSITORY:latest" >> $GITHUB_OUTPUT
 
       - name: Fill in the new image ID in the Amazon ECS task definition
         id: task-def
