Criação do proxy para integrar com a produção

--- a/src/FastFoodFIAP.Services.Api/appsettings.json
+++ b/src/FastFoodFIAP.Services.Api/appsettings.json
@@ -2,8 +2,11 @@
   "ConnectionStrings": {
     "Connectionstring": "Host=localhost;Port=5432;Pooling=true;Database=fastfood;User Id=postgres;Password=postgres;Include Error Detail=true;"
   },
-    "MercadoPago": {
-      "myProperty": true
+  "MercadoPago": {
+    "myProperty": true
+  },
+  "ProxyProducao": {
+    "Host": "http://localhost:5017/"
   },
   "Logging": {
     "LogLevel": {
