--- a/FastFoodFIAP.Infra.Producao/FastFoodFIAP.Infra.Producao.csproj
+++ b/FastFoodFIAP.Infra.Producao/FastFoodFIAP.Infra.Producao.csproj
@@ -15,6 +15,10 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\src\FastFoodFIAP.Domain\FastFoodFIAP.Domain.csproj" />
   </ItemGroup>
 
